<resources>
    <string name="app_name">BPR CMA</string>
    <string name="error_incorrect_user_name">Username anda salah</string>
    <string name="error_incorrect_password">Password anda salah</string>
    <string name="cekkoneksi">Koneksi anda sedang tidak stabil, silahkan coba lagi</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_username">user name</string>
    <string name="txt_password">password</string>
    <string name="logo">PT. BPR CMA</string>
    <string name="snk">Dengan login, Anda telah menyetujui</string>
    <string name="snk2">Syarat dan Ketentuan</string>
    <string name="txt_nama_profile">Nama</string>
    <string name="txt_email_profile">Email</string>
    <string name="txt_alamat_profile">Alamat</string>
    <string name="about_app">About</string>
    <string name="logout_app">Logout</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="action_daftar_customer">Daftar Customer</string>
    <string name="action_pengajuan_kredit">Pengajuan Kredit</string>
    <string name="action_informasi_kredit">Informasi Kredit</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="txt_status_kredit">Status Kredit</string>
    <string name="txt_hubungi">HUBUNGI</string>
    <string name="customer_profile">Profil Customer</string>
    <string name="keterangan">Keterangan</string>
    <string name="informasi_nasabah">Informasi Nasabah</string>
    <string name="txt_tempat_lahir">Tempat Lahir</string>
    <string name="txt_tanggal_lahir">Tanggal Lahir</string>
    <string name="txt_no_ktp">Nomor KTP</string>
    <string name="txt_nomor_telepon">Nomor Telepon</string>
    <string name="txt_alamat">Alamat Lengkap</string>
    <string name="txt_foto_debitur">Foto debitur, KTP dan KK (wajib diisi)</string>
    <string name="txt_next">NEXT</string>
    <string name="txt_foto_suami_istri">Foto Suami/Istri Debitur</string>
    <string name="txt_skip">SKIP</string>
    <string name="txt_foto_status_tmp_tinggl">Status tempat tinggal (boleh tidak diisi)</string>
    <string name="status">Status</string>
    <string name="txt_foto_tmp_tinggl_dbtr">Foto tempat tinggal debitur</string>
    <string name="informasi_usaha">Informasi Usaha/Pekerjaan</string>
    <string name="txt_jenis_utama_pekerjaan">Jenis utama pekerjaan</string>
    <string name="txt_rb_usaha">Usaha</string>
    <string name="txt_rb_karyawan">Karyawan</string>
    <string name="txt_rb_pensiunan">Pensiunan</string>
    <string name="txt_foto_tempat_usaha">Foto tempat</string>
    <string name="txt_foto_pendukung_usaha">Foto dokumen</string>
    <string name="txt_nominal">Nominal</string>
    <string name="txt_jangka_waktu">Jangka waktu</string>
    <string name="txt_bulan">Bulan</string>
    <string name="txt_rb_angsuran">Angsuran</string>
    <string name="txt_rb_berkala">Berkala</string>
    <string name="txt_jenis_kredit">Jenis kredit</string>
    <string name="txt_tujuan_penggunaan_kredit">Tujuan kenggunaan kredit</string>
    <string name="txt_pilih_tujuan_kredit">Pilih Tujuan penggunaan kredit</string>
    <string name="txt_sektor_ekonomi">Sektor ekonomi</string>
    <string name="txt_pilih_sektor_ekonomi">Pilih sektor ekonomi</string>
    <string name="txt_spesifikasi_usaha">Spesifikasi Usaha</string>
    <string name="txt_detail_penggunaan_kredit">Detail tujuan penggunaan kredit</string>
    <string name="txt_a_debitur">A. Debitur</string>
    <string name="txt_deskripsi_usaha">Deskripsi usaha</string>
    <string name="txt_mulai_sejak">Mulai sejak</string>
    <string name="txt_dd_mm_yy">DD/MM/YYYY</string>
    <string name="txt_status">Status</string>
    <string name="txt_rb_keluarga">Keluarga</string>
    <string name="txt_rb_kerjasama">Kerjasama</string>
    <string name="txt_rb_milik_sendiri">Milik sendiri</string>
    <string name="txt_detail_keterangan">Detail keterangan</string>
    <string name="txt_des_pnghsln_smpngn">Deskripsi penghasilan sampingan</string>
    <string name="txt_b_pasangan_debitur">B. Pasangan Debitur</string>
    <string name="permohonan_kredit">Permohonan Kredit</string>
    <string name="analisis_usaha">Analisa Usaha</string>
    <string name="txt_pilih_sumber_pengembalian">Pilih sumber pengembalian</string>
    <string name="smbr_pengembalian">Sumber Pengembalian Kredit</string>
    <string name="txt_periode">Periode</string>
    <string name="txt_aktiva">AKTIVA</string>
    <string name="analisis_keuangan">Analisa Keuangan</string>
    <string name="txt_aktiva_lancar">AKTIVA LANCAR</string>
    <string name="txt_kas">Kas</string>
    <string name="txt_bank">Bank</string>
    <string name="txt_piutang">Piutang</string>
    <string name="txt_persediaan">Persediaan</string>
    <string name="txt_sub_jumlah">Sub Jumlah</string>
    <string name="txt_aktiva_tetap">AKTIVA TETAP</string>
    <string name="txt_tanah">Tanah</string>
    <string name="txt_bangunan">Bangunan</string>
    <string name="txt_kendaraan">Kendaraan</string>
    <string name="txt_inv_lain">Inventaris lain-lain</string>
    <string name="txt_aku_depre">Akumulasi depresiasi</string>
    <string name="txt_total_aktiva">TOTAL AKTIVA</string>
    <string name="txt_pasiva">PASIVA</string>
    <string name="txt_hutang">HUTANG</string>
    <string name="txt_htg_bank">Hutang bank</string>
    <string name="txt_htg_dagang">Hutang dagang</string>
    <string name="txt_htg_jk_pj">Hutang jangka panjang</string>
    <string name="txt_kw_msh_hrs_dbyr">Kewajiban masih harus dibayar</string>
    <string name="txt_modal">MODAL</string>
    <string name="txt_modal1">Modal</string>
    <string name="txt_mdl_kerja">Modal kerja</string>
    <string name="txt_cd_laba_dthn">Cadangan laba ditahan</string>
    <string name="txt_lb_th_bjln">Laba tahun berjalan</string>
    <string name="prf_laba_rugi">Performa Laba/Rugi</string>
    <string name="txt_omz">A. Penjualan/Pendapatan (Omz)</string>
    <string name="txt_keterangan">Keterangan</string>
    <string name="txt_hpp">B. HPP</string>
    <string name="txt_biaya_usaha">C. Biaya-Biaya Usaha</string>
    <string name="txt_gaji_kyw">Gaji karyawan</string>
    <string name="txt_sw_tmp_usaha">Sewa tempat usaha</string>
    <string name="txt_lstrik_air_tel"><![CDATA[Listrik, air & telepon]]></string>
    <string name="txt_adm_keamanan_ling">Admin, keamanan, lingk.</string>
    <string name="txt_lain_lain">Lain-lain</string>
    <string name="txt_jml_biaya_usaha">Jumlah biaya usaha</string>
    <string name="txt_keuntungan_usaha">D. Keuntungan Usaha (A-B-C)</string>
    <string name="txt_grs_prft_mrgn">Gross profit margin (D/A)</string>
    <string name="txt_pndpt_tmbhn">E. Pendapatan Tambahan</string>
    <string name="txt_pndptn_suami_istri">Pendapatan suami/istri</string>
    <string name="txt_pndptn_lain">Pendapatan lainnya</string>
    <string name="txt_netto">F. Total Income Netto (D+E)</string>
    <string name="txt_keuangan_pribd">G. Keuangan Pribadi</string>
    <string name="txt_biaya_rt">Biaya rumah tangga</string>
    <string name="txt_b_pendidikan">Biaya pendidikan</string>
    <string name="txt_b_sewa_lainnya">Biaya sewa/lainnya</string>
    <string name="txt_ttl_b_pribd">Total biaya pribadi</string>
    <string name="txt_sisa_pnghsln_net">H. Sisa Penghasilan Bersih (F-G)</string>
    <string name="txt_angs_bnk_lain">I. Angsuran bank lain (ABL)</string>
    <string name="txt_trmsk_angs_cma">(termasuk angsuran di CMA, jika ada fasilitas lain)</string>
    <string name="txt_rnc_angs">J. Rencana Angsuran di CMA</string>
    <string name="txt_ssuai_prm_kredit">(sesuai permohonan kredit/sesuai yang diusulkan)</string>
    <string name="txt_total_angs">K. Total Angsuran (TA)</string>
    <string name="anls_ratio">Analisa Ratio</string>
    <string name="txt_likuiditas">A. LIKUIDITAS</string>
    <string name="txt_crnt_ratio">1. Current Ratio</string>
    <string name="txt_ak_hut_lancar">(Ak.Lancar/Hut.Lancar)</string>
    <string name="txt_cash_ratio">2. Cash Ratio</string>
    <string name="txt_solvabilitas">B. SOLVABILITAS</string>
    <string name="txt_tlr">1. TLR (Total Leverage Ratio)</string>
    <string name="txt_t_hut_aktv">(T.Hutang/T.Aktiva)</string>
    <string name="txt_ak_hut_lancar2">(Ak.Lancar-Inv/Hut.Lancar)</string>
    <string name="txt_der">2. DER(Debt Enquity Ratio)</string>
    <string name="txt_t_hut_mdl">T.Hutang/T.Modal)</string>
    <string name="min1_ideal"><![CDATA[<1(Ideal)]]></string>
    <string name="txt_profitabilitas">C. PROFITABILITAS</string>
    <string name="txt_npm">1. NPM(Net Profit Margin)</string>
    <string name="txt_rms_npm">(Laba Bersih/Penjualan X 100%)</string>
    <string name="txt_smkn_b">(semakin besar semakin baik)</string>
    <string name="txt_roe">2. ROE(Return of Equity</string>
    <string name="txt_rms_roe">(Laba Bersih/Modal Sdr X 100%)</string>
    <string name="txt_prd_ppt">A. Periode Perputaran (Hari)</string>
    <string name="wrk_inv">Working Investment</string>
    <string name="txt_doh_piutang">DOH Piutang</string>
    <string name="txt_doh_persediaan">DOH Persediaan</string>
    <string name="txt_doh_hutang">DOH Hutang</string>
    <string name="txt_rms_doh_piutang">(P.Dag/Omz)X30</string>
    <string name="txt_rms_doh_persediaan">(Inv/HPP)X30</string>
    <string name="txt_rms_doh_hutang">(H.Dag/HPP)X30</string>
    <string name="txt_kbthn_m_krj">B. Kebutuhan Modal Kerja</string>
    <string name="txt_rms_kbthn_m_krj">= (Omz/30*DOH Piutang)+(Omz/30*30DOH Persediaan)+(H.dag/30*DOH Hutang)</string>
    <string name="txt_rms_mx_kredit">= 35% X (H-1) X Jk.WT</string>
    <string name="txt_mx_kredit">C. Maximal kredit yang bisa diberikan di CMA</string>
    <string name="txt_mx_angs">D. Maximal angsuran kredit di CMA</string>
    <string name="txt_rms_mx_angs">= 35% X (H-1)</string>
    <string name="txt_mx_kredit_tk">E. Maximal kredit sari taksasi agunan</string>
    <string name="txt_rms_kredit_tk">= 35% X (H-1)</string>
    <string name="txt_angs_ini">Angsuran Saat ini</string>
    <string name="txt_iir">IIR (Installment to Income Ratio) :</string>
    <string name="txt__rms_iir">= (Angsuran saat ini + Rencana angsuran baru)/ Total penghasilan bersih</string>
    <string name="txt_d_i">Disposable Income : (Sisa penghasilan bersih - Angsuran)</string>
    <string name="txt_idir">IDIR (Investment to Disposable Income Ratio)</string>
    <string name="txt__rms_idir">= (Angsuran saat ini + Rencana angsuran baru)/ Disposable Income</string>
    <string name="txt_fktr_pos">Faktor Positif</string>
    <string name="txt_fktr_neg">Faktor Negatif</string>
    <string name="tmbhn_info">Tambahan Informasi</string>
    <string name="kesimpulan">Kesimpulan</string>
    <string name="txt_karakter">Karakter</string>
    <string name="txt_kapasitas">Kapasitas</string>
    <string name="txt_kapital">Kapital</string>
    <string name="txt_jaminan">Jaminan</string>
    <string name="txt_rb_baru">Baru</string>
    <string name="txt_rb_tambahan">Tambahan</string>
    <string name="txt_rb_pembaharuan">Pembaharuan</string>
    <string name="txt_jnis_kredit">Jenis Kredit</string>
    <string name="txt_plafon_kredit">Pembaharuan/Plafond Kredit</string>
    <string name="txt_title_keadaan_bangunan">KEADAAN BANGUNAN</string>
    <string name="txt_ls_bngn">Luas Bangunan</string>
    <string name="txt_jns_bngn">Jenis Bangunan</string>
    <string name="txt_rb_rb_prmn">Permanen</string>
    <string name="txt_rb_sm_prmn">Semi Permanen</string>
    <string name="txt_konstruksi">Konstruksi</string>
    <string name="txt_rb_btn_trtlng">Beton tertulang</string>
    <string name="txt_rb_bs_bj">Besi baja</string>
    <string name="txt_rb_kayu">Kayu</string>
    <string name="txt_klts_bngn">Kualitas Bangunan</string>
    <string name="txt_th_dibangun">Tahun Dibangun</string>
</resources>