<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form.AnalisisUsahaPart2Activity">
    <include
        layout="@layout/new_toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_bg"
            android:padding="@dimen/padding"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sub_title"
                android:padding="@dimen/padding5"
                android:text="@string/txt_b_pasangan_debitur"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sub_title"
                android:padding="@dimen/padding5"
                android:text="@string/txt_deskripsi_usaha"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/full_rounded_corner_white">
                <EditText
                    android:id="@+id/et_deskripsi_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/padding5"
                    android:inputType="textMultiLine"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sub_title"
                android:padding="@dimen/padding5"
                android:text="@string/txt_mulai_sejak"/>
            <TextView
                android:id="@+id/tv_spesifikasi_usaha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding5"
                android:textSize="@dimen/sub_title"
                android:background="@drawable/full_rounded_corner_white"
                android:hint="@string/txt_dd_mm_yy"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding5"
                android:paddingLeft="@dimen/padding5">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textSize="@dimen/sub_title"
                    android:padding="@dimen/padding5"
                    android:text="@string/txt_status"/>
                <RadioGroup
                    android:id="@+id/rg_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/rb_milik_sendiri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_rb_milik_sendiri"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/rb_keluarga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_rb_keluarga" />
                    <RadioButton
                        android:id="@+id/rb_kerjasama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_rb_kerjasama" />
                </RadioGroup>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sub_title"
                android:padding="@dimen/padding5"
                android:text="@string/txt_detail_keterangan"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/full_rounded_corner_white">
                <EditText
                    android:id="@+id/et_detail_keterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/padding5"
                    android:inputType="textMultiLine"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sub_title"
                android:padding="@dimen/padding5"
                android:text="@string/txt_des_pnghsln_smpngn"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/full_rounded_corner_white">
                <EditText
                    android:id="@+id/et_des_pnghsln_smpngn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/padding5"
                    android:inputType="textMultiLine"/>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding10" />
            <android.support.design.button.MaterialButton
                android:id="@+id/btn_next_an_usaha2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="@string/txt_next"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>