<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form.KeadaanBangunanActivity">
    <include
        layout="@layout/new_toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/grey_bg">
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding10" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding5"
                android:background="@drawable/bg_grey_stroke_1"
                android:text="@string/txt_title_keadaan_bangunan"
                android:textSize="@dimen/title"
                android:textAlignment="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding"
                android:background="@color/grey_bg">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sub_title"
                    android:padding="@dimen/padding5"
                    android:text="@string/txt_th_dibangun"/>
                <EditText
                    android:id="@+id/et_th_dibangun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding5"
                    android:textSize="@dimen/sub_title"
                    android:background="@drawable/full_rounded_corner_white"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:ems="10"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding5" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sub_title"
                        android:padding="@dimen/padding5"
                        android:text="@string/txt_ls_bngn"/>
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3">
                        <EditText
                            android:id="@+id/et_luas_bangunan"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@drawable/right_rounded_corner_white"
                            android:ems="10"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLines="1"
                            android:padding="@dimen/padding5"
                            android:textSize="@dimen/sub_title" />
                        <TextView
                            android:id="@+id/m2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/right_rounded_corner_grey"
                            android:focusable="false"
                            android:padding="@dimen/padding5"
                            android:textColor="@color/black"
                            android:text="m"
                            android:textSize="@dimen/sub_title" />
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sub_title"
                    android:padding="@dimen/padding5"
                    android:text="@string/txt_jns_bngn"/>
                <RadioGroup
                    android:id="@+id/rg_jns_bngn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding10"
                    android:paddingStart="@dimen/padding10"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/rb_prmn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_rb_rb_prmn"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/rb_sm_prmn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_rb_sm_prmn" />
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sub_title"
                    android:padding="@dimen/padding5"
                    android:text="@string/txt_konstruksi"/>
                <RadioGroup
                    android:id="@+id/rg_konstruksi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding10"
                    android:paddingStart="@dimen/padding10"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/rb_btn_trtlng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_rb_btn_trtlng"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/rb_bs_bj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_rb_bs_bj" />
                    <RadioButton
                        android:id="@+id/rb_kayu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_rb_kayu" />
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sub_title"
                    android:padding="@dimen/padding5"
                    android:text="@string/txt_klts_bngn"/>
                <EditText
                    android:id="@+id/et_klts_bngn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding5"
                    android:textSize="@dimen/sub_title"
                    android:background="@drawable/full_rounded_corner_white"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:ems="10"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/padding20" />
                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_next_keadaan_bangunan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:text="@string/txt_next"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>