<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/LoginTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/login_bg">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="165dp"
        android:scaleType="fitCenter"
        android:src="@drawable/login_logo"
        android:layout_margin="@dimen/padding"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/a"/>

    <android.support.design.widget.TextInputLayout
        android:layout_centerInParent="true"
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_outline_perm_identity_24px"
            android:drawableStart="@drawable/ic_outline_perm_identity_24px"
            android:drawablePadding="@dimen/padding20"
            android:textSize="@dimen/sub_title"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:ems="10"
            android:hint="@string/txt_username"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/a"
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding20"
            android:paddingBottom="@dimen/padding20"
            android:paddingStart="@dimen/padding"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:drawableLeft="@drawable/ic_round_lock_24px"
            android:drawableStart="@drawable/ic_round_lock_24px"
            app:drawable_show="@drawable/ic_round_visibility_24px"
            app:drawable_hide="@drawable/ic_round_visibility_off_24px"
            android:drawablePadding="@dimen/padding20"
            android:textSize="@dimen/sub_title"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:ems="10"
            android:hint="@string/txt_password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:layout_below="@+id/b"
        android:id="@+id/btn_login"
        app:backgroundTint="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"/>

    <TextView
        android:id="@+id/c"
        android:layout_above="@+id/d"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/snk"/>
    <TextView
        android:id="@+id/d"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/snk2"/>

</RelativeLayout>